2010-11-17  Joseph Myers  <joseph@codesourcery.com>

	* f95-lang.c (gfc_be_parse_file): Take no arguments.

2010-11-16  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>
	    Tobias Burnus  <burnus@net-b.de>

	PR fortran/32049
	* gfortranspec.c (find_spec_file): New function.
	(lang_specific_driver): Try to find .spec file and use it.
	* trans-io.c (iocall): Define IOCALL_X_REAL128/COMPLEX128(,write).
	(gfc_build_io_library_fndecls): Build decl for __float128 I/O.
	(transfer_expr): Call __float128 I/O functions.
	* trans-types.c (gfc_init_kinds): Allow kind-16 belonging
	to __float128.

2010-11-15  Tobias Burnus  <burnus@net.b.de>

	PR fortran/46484
	* check.c (variable_check): Don't treat functions calls as variables;
	optionally accept function themselves.
	(gfc_check_all_any, gfc_check_loc, gfc_check_move_alloc,
	gfc_check_null, gfc_check_present, gfc_check_cpu_time,
	gfc_check_date_and_time, gfc_check_mvbits, gfc_check_random_number,
	gfc_check_random_seed, gfc_check_system_clock,
	gfc_check_dtime_etime, gfc_check_dtime_etime_sub,
	gfc_check_itime_idate,gfc_check_ltime_gmtime): Update call.

2010-11-13  Tobias Burnus  <burnus@net-b.de>

	PR fortran/45742
	* trans-common.c (build_field): Add TREE_SIDE_EFFECTS for volatile.
	* trans-decl.c (gfc_finish_var_decl): Ditto.
	(create_function_arglist): Handle volatile dummy arguments.

2010-11-12  Joseph Myers  <joseph@codesourcery.com>

	* Make-lang.in (gfortranspec.o): Use $(OPTS_H).
	* gfortran.h (gfc_handle_option): Take location_t parameter.
	* options.c (gfc_handle_option): Take location_t parameter.

2010-11-12  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR fortran/45794
	trans-expr.c (gfc_conv_procedure_call): Avoid NULL array spec.
	
2010-11-11  Nathan Froyd  <froydnj@codesourcery.com>

	PR c/44782
	* options.c (gfc_post_options): Initialize gfc_option.max_errors.
	(gfc_handle_option) [OPT_fmax_errors_]: Remove.
	* lang.opt (fmax-errors=): Remove.

2010-11-11  Steven G. Kargl <kargl@gcc.gnu.org>
